--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pydantic==2.5.0
+pydantic>=2.9.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 celery==5.3.4
@@ -14,10 +14,10 @@ redis==5.0.1
 minio==7.2.0
 emails==0.6
 jinja2==3.1.2
-pillow==10.1.0
-pypdf2==3.0.1
-openpyxl==3.1.2
-pandas==2.1.3
-httpx==0.25.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pillow>=10.0.0
+pypdf2>=3.0.0
+openpyxl>=3.1.0
+pandas>=2.0.0
+httpx>=0.25.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
