--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,15 +9,9 @@ python-multipart==0.0.6
 pydantic>=2.9.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-celery==5.3.4
-redis==5.0.1
-minio==7.2.0
-emails==0.6
-jinja2==3.1.2
-pillow>=10.0.0
-pypdf2>=3.0.0
-openpyxl>=3.1.0
-pandas>=2.0.0
-httpx>=0.25.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
+bcrypt==4.1.1
+email-validator==2.1.0
+mangum==0.17.0
+
+# Vercel deployment - minimal dependencies
+# Remove heavy packages for faster deployment
