--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
     "react-hook-form": "^7.48.2",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
