--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,16 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+sqlalchemy==2.0.36
+alembic==1.14.0
+psycopg2-binary==2.9.10
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic>=2.9.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-bcrypt==4.1.1
-email-validator==2.1.0
-mangum==0.17.0
-
-# Vercel deployment - minimal dependencies
-# Remove heavy packages for faster deployment
+python-multipart==0.0.20
+pydantic==2.10.3
+pydantic-settings==2.7.0
+python-dotenv==1.0.1
+bcrypt==4.2.1
+email-validator==2.2.0
+minio==7.2.11
+cryptography==44.0.0
+aiofiles==24.1.0
