--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -9,4 +9,4 @@ cmds = ["pip install -r requirements-free.txt"]
 cmds = ["echo 'Build phase completed'"]
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT"
