--- a/fly.toml
+++ b/fly.toml
@@ -1,46 +1,26 @@
-# fly.toml app configuration file generated for muvekkil-paneli on 2025-11-09T10:17:42+03:00
+# fly.toml app configuration file generated for muvekkil-frontend on 2025-11-09T11:55:34+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'muvekkil-paneli'
+app = 'muvekkil-frontend'
 primary_region = 'fra'
 
 [build]
+  dockerfile = 'Dockerfile.frontend'
+
+[env]
+  VITE_API_URL = 'https://muvekkil-paneli.fly.dev'
 
 [http_service]
-  internal_port = 8000
+  internal_port = 80
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
-[[services]]
-  protocol = 'tcp'
-  internal_port = 8000
-  processes = ['app']
-
-  [[services.ports]]
-    port = 80
-    handlers = ['http']
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ['tls', 'http']
-
-  [services.concurrency]
-    type = 'connections'
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = '15s'
-    timeout = '2s'
-    grace_period = '1s'
-
 [[vm]]
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
